Fix spacing in info, testimonial and CTA section

--- a/general.css
+++ b/general.css
@@ -90,8 +90,14 @@ ul {
 /* General used classes */
 /***************************/
 .container {
-  /* 1200px */
-  max-width: 120rem;
+  /* 1000px */
+  max-width: 100rem;
+  margin: 0 auto;
+  padding: 0 3.2rem;
+}
+.second-container {
+  /* 800px */
+  max-width: 80rem;
   margin: 0 auto;
   padding: 0 3.2rem;
 }
